--- a/style.css
+++ b/style.css
@@ -69,7 +69,10 @@ body {
     text-align: center;
     background-size: cover;
     background-position: center;
-    padding: 100px 20px;
+    /* padding: 100px 20px; */
+    padding-left: 20px;
+    padding-top: 220px;
+    padding-bottom: 30px;
     color: #fff;
   }
   
@@ -79,7 +82,7 @@ body {
   
   #hero h1 {
     font-size: 3em;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
   
   #hero p {
